fixed margins and alignment 1/9/2017_2:23PM

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,13 @@ svg{
 }
 
 #mainBody{
-	position: absolute;
-	height:auto;
-	margin:0px;
+	width: 100%;
+	height:10%;
+	padding:0px;
+	margin:0px auto;
+}
+
+#leftSide, #rightSide{
+	margin:0px !important;
+	padding:0px !important;
 }
